Fix client running under wine